--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "online-doc",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,7 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.9.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -38,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.90.11",
     "@tiptap/core": "^2.11.9",
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-font-family": "^2.11.7",
@@ -58,10 +61,12 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "@types/react-color": "^3.0.13",
+    "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.5.2",
     "extension-font-family@2.10.2": "link:tiptap/extension-font-family@2.10.2",
     "input-otp": "^1.4.2",
@@ -70,7 +75,6 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pg": "^8.16.0",
-    "prisma": "^6.9.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
@@ -84,18 +88,21 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "1.2.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
+    "zod": "^4.1.12",
     "zustand": "5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^7.0.1",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
