--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pg": "^8.16.0",
+    "query-string": "^9.3.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
