1. add DELETE for document 2. add features to document-table

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/react-color": "^3.0.13",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
@@ -71,6 +72,7 @@
     "embla-carousel-react": "^8.5.2",
     "extension-font-family@2.10.2": "link:tiptap/extension-font-family@2.10.2",
     "input-otp": "^1.4.2",
+    "lodash-es": "^4.17.22",
     "lucide-react": "^0.479.0",
     "next": "15.0.3",
     "next-themes": "^0.4.6",
